# chuobata-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: chuobata.yml
config/: settings.py  urls.py
core/: settings.py
djapps/course/: apps.py  models.py  views.py
djapps/course/.github/workflows/: chuobata.yml
djapps/skills/: apps.py  models.py  serializers.py  urls.py  views.py
djapps/skills/migrations/: 0001_initial.py
djapps/student/: apps.py
djapps/users/: admin.py  apps.py  authentication.py  forms.py  models.py  urls.py  views.py
djapps/users/migrations/: 0001_initial.py  0002_customuser_phone_number_alter_customuser_email_and_more.py  0003_alter_customuser_phone_number.py  0004_alter_customuser_table.py  0005_alter_customuser_id_alter_customuser_table.py
djapps/users/templates/users/: home.html  login.html  logout.html  register.html
templates/: base.html
