[project]
name = "chuobata-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "django-allauth[socialaccount]>=65.10.0",
    "django-crispy-forms>=2.4",
    "django-phonenumber-field[phonenumberslite]>=8.1.0",
    "django-rest-framework>=0.1.0",
    "django-schema-viewer>=0.5.3",
    "python-decouple>=3.8",
]
 
 